# trajectory_preview

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
.github/workflows/: ubuntu.yml
include/trajectory_preview/: trajectory_preview_panel.h  trajectory_preview_widget.h
launch/: robot_model_preview_pipeline.launch.xml
src/: robot_trajectory.h  trajectory_preview_impl.h  trajectory_preview_panel.cpp  trajectory_preview_widget.cpp
ui/: trajectory_preview_widget.ui
