<?xml version="1.0"?>
<package format="2">
  <name>trajectory_preview</name>
  <version>0.0.0</version>
  <description>The trajectory_preview package</description>

  <author email="mripperger@swri.org">Michael Ripperger</author>
  <maintainer email="mripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tesseract_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
