<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_preview</name>
  <version>0.0.0</version>
  <description>The trajectory_preview package</description>

  <author email="mripperger@swri.org">Michael Ripperger</author>
  <maintainer email="mripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rviz_common</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <depend>pluginlib</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
